--- a/census_new/index.html
+++ b/census_new/index.html
@@ -14,7 +14,7 @@
 			<div class="container" id="map-content"><svg id="mapContainer"></svg></div>
 			<div class="text_wrapper" style="background: #fff">
 				<div class="text_container">
-					<h4>Working in America</h4>
+					<h4>Working in the northeast</h4>
 					The ratio of male to female in <select id="selector" onchange="chooseJob()">
 						<option value="occu_architect">architecture_and_engineering</option>
 						<option value="occu_computer">computer_engineering_and_science</option>
