--- a/census_new/index.html
+++ b/census_new/index.html
@@ -21,6 +21,10 @@
 						<option value="occu_buiness">management_business_and_financial</option>
 						<option value="occu_edu">education_training_and_library</option>
 						<option value="occu_farm">farming_fishing_and_forestry</option>
+						<option value="occu_farm">food_prepararion_and_serving</option>
+						<option value="occu_farm">healthcare_support</option>
+						<option value="occu_farm">legal</option>
+						<option value="occu_farm">Production</option>
 					</select>in MA, ME, CT and other 8 states.
 					<!-- There are <font id="maleNum">0</font> males and <font id="femaleNum">0</font> females in this job in <font id="locationName">somewhere</font>. And <font id="population">0</font> people live here. -->
 				</div>
