--- a/census_new/index.html
+++ b/census_new/index.html
@@ -25,6 +25,13 @@
 						<option value="occu_farm">healthcare_support</option>
 						<option value="occu_farm">legal</option>
 						<option value="occu_farm">Production</option>
+						<option value="occu_farm">installation</option>
+						<option value="occu_farm">Life, phsical and social science</option>
+						<option value="occu_farm">management</option>
+						<option value="occu_farm">office</option>
+						<option value="occu_farm">personal care</option>
+						<option value="occu_farm">protective service</option>
+						<option value="occu_farm">arts design</option>
 					</select>in MA, ME, CT and other 8 states.
 					<!-- There are <font id="maleNum">0</font> males and <font id="femaleNum">0</font> females in this job in <font id="locationName">somewhere</font>. And <font id="population">0</font> people live here. -->
 				</div>
