--- a/census_new/index.html
+++ b/census_new/index.html
@@ -14,7 +14,7 @@
 			<div class="container" id="map-content"><svg id="mapContainer"></svg></div>
 			<div class="text_wrapper" style="background: #fff">
 				<div class="text_container">
-					<h4>Working in the northeast</h4>
+					<h4>Working in the northeast America</h4>
 					The ratio of male to female in <select id="selector" onchange="chooseJob()">
 						<option value="occu_architect">architecture_and_engineering</option>
 						<option value="occu_computer">computer_engineering_and_science</option>
@@ -32,7 +32,7 @@
 						<option value="occu_farm">personal care</option>
 						<option value="occu_farm">protective service</option>
 						<option value="occu_farm">arts design</option>
-					</select>in MA, ME, CT and other 8 states.
+					</select> <br>in 11 states in northeast America.
 					<!-- There are <font id="maleNum">0</font> males and <font id="femaleNum">0</font> females in this job in <font id="locationName">somewhere</font>. And <font id="population">0</font> people live here. -->
 				</div>
 			</div>
